// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Should render with a custom image  1`] = `
<img
  alt="Product img"
  className="productImg undefined"
  src="https://image.com/image.png"
/>
`;

exports[`ProductImage Should render with a default image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product img"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
